attempt2 fixing scaling issue on mobile

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     font-family: "Roboto Mono", monospace;
     margin: 0;
     padding: 0;
+    font-size: 1em;
   }
   /* body {
     flex-direction: column;
@@ -16,6 +17,7 @@
     color: #000000;
     padding: 1em;
     text-align: center;
+    font-size: 1em;
   }
   
   header h1 {
@@ -65,6 +67,7 @@
   
   main {
     padding: 0.5em;
+    font-size: 1em;
   }
   
   footer {
